# supermarket-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_app.sh
backend/: .env.example  .env.sample  Dockerfile  README.md  backend.postman_collection.json  db.sqlite3  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt
backend/alpha/: asgi.py  settings.py  urls.py  wsgi.py
backend/home/: models.py  serializers.py  urls.py  views.py
backend/models/: __init__.py  category_url.py  database.py  product.py  product_url.py  supermarket.py
backend/routes/: __init__.py  catalog.py  health.py  inflation.py  products.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: custom-footer.tsx  custom-hero.tsx  custom-navbar.tsx  theme-provider.tsx
frontend/hooks/: use-cart.tsx  use-toast.ts
linkgenerator/: __init__.py
linkgenerator/arete/: linkgenerator.py
linkgenerator/casa_rica/: linkgenerator.py
linkgenerator/stock/: linkgenerator.py
linkgenerator/superseis/: linkgenerator.py
my-pipeline/: io_config.yaml  metadata.yaml
my-pipeline/.cache/: block_action_objects_mapping  blocks_to_pipeline_mapping  pipeline_details_mapping
my-pipeline/.operation_history/: 2025-04-02
my-project/: metadata.yaml
my-project/.cache/: block_action_objects_mapping  blocks_to_pipeline_mapping  pipeline_details_mapping
my-project/custom/: create_hyptertables.sql  create_schemas.sql  create_tables.sql  drop_tables.sql  insert_test_products_data.sql  insert_test_supermarkets_data.sql  insert_test_urls_data.sql  piperunner.py  piperunner_1.py  piperunner_2.py
my-project/data_exporters/: load_category_urls_biggie.py  load_category_urls_html_superseis.py  load_category_urls_superseis.py  load_product_urls.py  load_product_urls_and_products_biggie.py  load_product_urls_html_superseis.py  load_product_urls_superseis.py  load_products.py  load_products_html_superseis.py  load_products_superseis.py  redis_test.py
my-project/data_loaders/: extract_category_urls_html_superseis.sql  extract_category_urls_superseis.sql  extract_product_urls_html_superseis.sql  extract_product_urls_superseis.sql  extract_products_html_superseis.sql  extract_supermarkets_superseis.sql  extract_urls.sql  extract_urls_biggie.sql  extract_urls_stock.sql  extract_urls_superseis.sql  testing_something.py
my-project/transformers/: fan_category_urls.py  fan_category_urls_superseis.py  fan_product_urls.py  fan_product_urls_html_superseis.py  fan_product_urls_superseis.py  fan_products_html_superseis.py  reduce_category_urls_to_product_urls_biggie.py  reduce_category_urls_to_product_urls_superseis.py  reduce_product_url_to_product_biggie.py  reduce_product_urls_to_product.py  reduce_product_urls_to_product_superseis.py  transform_api_to_category_urls.py  transform_api_to_category_urls_biggie.py  transform_category_urls_html_to_category_urls_superseis.py  transform_category_urls_to_product_urls_html_superseis.py  transform_category_urls_to_product_urls_superseis.py  transform_html_to_category_urls.py  transform_html_to_category_urls_superseis.py  transform_product_urls_html_to_product_urls_superseis.py  transform_product_urls_to_products_html_superseis.py  transform_products_html_to_products_superseis.py  transform_supermarkets_to_category_urls_html_superseis.py
pipeline/: Dockerfile  README.md  requirements.txt  supermarket.yaml
pipeline/.astro/: config.yaml
pipeline/dags/: broker.py  config_database_init.py  config_streams_clear.py  config_streams_init.py  constants.py  database_init.py  exceptions.py  parametrized_biggie_product_urls.py  parametrized_biggie_product_urls_html.py  parametrized_biggie_products.py  parametrized_biggie_products_html.py  parametrized_casarica_product_urls.py  parametrized_casarica_product_urls_html.py  parametrized_casarica_products.py  parametrized_casarica_products_html.py  parametrized_superseis_product_urls.py  parametrized_superseis_product_urls_html.py  parametrized_superseis_products.py  parametrized_superseis_products_html.py  scrape_category_urls_biggie.py  scrape_category_urls_casarica.py  scrape_category_urls_html_biggie.py  scrape_category_urls_html_casarica.py  scrape_category_urls_html_superseis.py  scrape_category_urls_superseis.py  scrape_product_urls_biggie.py  scrape_product_urls_casarica.py  scrape_product_urls_html_biggie.py  scrape_product_urls_html_casarica.py  scrape_product_urls_html_superseis.py  scrape_product_urls_superseis.py  scrape_products_biggie.py  scrape_products_casarica.py  scrape_products_html_biggie.py  scrape_products_html_casarica.py  scrape_products_html_superseis.py  scrape_products_superseis.py  supermarket_biggie_category_urls.py  supermarket_biggie_category_urls_html.py  (+33 more)
product_scraper/: requirements.txt  test_stuff.py
scraper/: requirements.txt
worker/: .env.example  Dockerfile  README.md  consumer.py  main.py  models.py  producer.py  pyproject.toml  requirements.txt
worker/models/: __init__.py  category_url.py  category_url_html.py  database.py  product.py  product_html.py  product_url.py  product_url_html.py  supermarket.py
(+70 files in other folders)
