[project]
name = "supermarket-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16, <3.10.17"
dependencies = [
    "aiofiles==22.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.10.0",
    "aiosignal==1.3.2",
    "alembic==1.14.1",
    "altair==4.2.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backcall==0.2.0",
    "bcrypt==4.0.1",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "croniter==1.3.7",
    "cryptography==42.0.4",
    "dask==2024.8.0",
    "datadog==0.44.0",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "entrypoints==0.4",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "faker==4.14.0",
    "fastjsonschema==2.21.1",
    "fqdn==1.5.1",
    "freezegun==1.2.2",
    "frozenlist==1.5.0",
    "fsspec==2025.3.2",
    "gitdb==4.0.12",
    "gitpython==3.1.41",
    "great-expectations==0.18.12",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==0.18.0",
    "httpx==0.25.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "inflection==0.5.1",
    "ipykernel==6.15.0",
    "ipython==8.10.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "itsdangerous==1.1.0",
    "jedi==0.19.2",
    "jinja2==3.1.3",
    "joblib==1.4.2",
    "json5==0.11.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==7.4.4",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.14.1",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "ldap3==2.9.1",
    "levenshtein==0.27.1",
    "locket==1.0.0",
    "mage-ai==0.9.76",
    "makefun==1.15.6",
    "mako==1.3.9",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "memory-profiler==0.61.0",
    "mistune==3.1.3",
    "multidict>=6.3.2",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "newrelic==8.8.0",
    "notebook==7.3.3",
    "notebook-shim==0.2.4",
    "numpy==1.26.4",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "paramiko==3.5.1",
    "parso==0.8.4",
    "partd==1.4.2",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==10.3.0",
    "platformdirs==4.3.7",
    "polars==0.19.1",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.1",
    "protobuf==6.30.2",
    "psutil==5.9.8",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyairtable==3.0.2",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic>=2.7.4",
    "pygithub==1.59.0",
    "pygments==2.19.1",
    "pyjwt==2.6.0",
    "pynacl==1.5.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.8.2",
    "python-json-logger==3.3.0",
    "python-levenshtein==0.27.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "rapidfuzz==3.12.2",
    "redis[asyncio]>=5.0.8",
    "referencing==0.36.2",
    "requests==2.31.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.24.0",
    "ruamel-yaml==0.17.17",
    "ruamel-yaml-clib==0.2.12",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "send2trash==1.8.3",
    "sentry-sdk==1.19.1",
    "shellingham==1.5.4",
    "simplejson==3.20.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==1.4.54",
    "sqlglot==26.12.1",
    "sqlglotrs==0.4.0",
    "sshtunnel==0.4.0",
    "stack-data==0.6.3",
    "terminado==0.17.1",
    "text-unidecode==1.3",
    "thefuzz==0.19.0",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tomli==2.2.1",
    "toolz==1.0.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.9.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions>=4.10.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "watchdog==4.0.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.0.3",
    "widgetsnbextension==4.0.13",
    "wrapt==1.17.2",
    "yarl==1.18.3",
    "zipp==3.21.0",
]
